<resources>
    <string name="app_name">NasaPic</string>
    <string name="application_name">NasaPic</string>
    <string name="api_meta_fallback">http://nasapicapp-live-%s.appspot.com/</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_app_close">App close</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_agree">I agree.</string>
    <string name="btn_not_agree">I do not agree.</string>
    <string name="btn_check">Check</string>

    <string name="msg_permission_prompt">Without "Read Phone State" and "Write External Storage" the App can\'t work…</string>

    <string name="lbl_store_url">https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="lbl_share_app_title">Pictures from NASA</string>
    <string name="lbl_share_app_content">Hello!\n\nHere is %1$s and I am a new free light-weight independent App that shows all available pictures from NASA.\n\n%2$s</string>
    <string name="lbl_share_download_app">Download %1$s\n%2$s</string>
    <string name="lbl_more_photos">More photos</string>
    <string name="lbl_photo_datetime_prefix">%s</string>
    <string name="lbl_no_results">No results!</string>
    <string name="lbl_earlier_than_1998">You can not query before 1998, try somewhat later.</string>
    <string name="lbl_before_today">You can not query for what from tomorrow.</string>

    <string name="lbl_share_item_title">@string/application_name</string>
    <string name="lbl_share_item_content">Hi,\n\n%1$s\n%2$s\n\n%3$s</string>
    <string name="lbl_query">Query</string>
    <string name="lbl_year">year</string>
    <string name="lbl_month">month</string>
    <string name="lbl_day">day</string>
    <string name="lbl_day_optional">* Empty day value is optional for query whole month.</string>
    <string name="lbl_year_month_day_wrong">year-month-day all must be larger than 0.</string>

    <string name="lbl_new_photos">New photos</string>

    <!-- Shown in the 'About' window of the app. -->
    <string name="about_body">&lt;b&gt;%1$s &lt;/b&gt;&lt;br&gt;Version %2$s &lt;br&gt;</string>
    <!-- Shown as a link in the About screen of the app; user can click it to see the licenses. -->
    <string name="about_licenses">Open Source Licenses</string>
    <!-- Shown as a link in the About screen of the app; user can click to see the EULA. -->
    <string name="about_eula">End User License Agreement</string>
    <string name="about_eula_legal_text">Your use of this application is governed by a)Activating permissions of
        hardware that the features of this application need and work well. b)The Google Terms of
        Service (http://www.google.com/intl/en/policies/terms/), Google\'s Privacy
        Policy(http://www.google.com/intl/en/policies/privacy/). c)Any applicable Google service-specific terms of service of privacy
        policies. Google\'s terms of service and privacy policies may be updated from time to time and without
        notice.\n\n\nBy using the application, your agree to the use of your data and permissions of your hardware in
        accordance with Google\'s Privacy Policy and Google Terms of Service.</string>
    <string name="play_service">This application needs Google Play Service, you must install it first.</string>
    <string name="play_service_url">market://details?id=com.google.android.gms</string>
    <string name="play_service_web">https://play.google.com/store/apps/details?id=com.google.android.gms</string>

    <string name="action_share">More share</string>
    <string name="action_invite">Invite more people to use this app</string>
    <string name="action_open">Open</string>
    <string name="action_share_fb">Post on Facebook</string>
    <string name="action_photo_qu">Quality</string>
    <string name="action_wallpaper_daily">Set wallpaper daily</string>
    <string name="action_about">About</string>
    <string name="action_more_apps">More Apps</string>
    <string name="action_backward">Backward</string>
    <string name="action_forward">Forward</string>
    <string name="action_settings">Settings</string>

    <string name="normal_ad_unit">ca-app-pub-9133982521997162/2818268530</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-9133982521997162/3097470130</string>
    <string name="applicationId">813465918763218</string>


    <string name="no_app_to_share">No app installed to share data of type %s!</string>
    <string name="no_share_type">No share type specified!</string>
    <string name="error_occurred">Sorry, an error occurred.</string>
    <string name="error_switch_hd">Sorry, an error occurred while loading HD photo.</string>


    <string name="size_multiplier_25">25%</string>
    <string name="size_multiplier_50">50%</string>
    <string name="size_multiplier_75">75%</string>
    <string name="size_multiplier_100">100%</string>

    <integer-array name="size_multipliers">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </integer-array>

    <string name="wallpaper_daily_time_plan_1_hour">1 hour</string>
    <string name="wallpaper_daily_time_plan_2_hour">2 hours</string>
    <string name="wallpaper_daily_time_plan_3_hour">3 hours</string>
    <string name="wallpaper_daily_time_plan_4_hour">4 hours</string>
    <string name="wallpaper_daily_time_plan_5_hour">5 hours</string>
    <string name="wallpaper_daily_time_plan_6_hour">6 hours</string>





    <string name="invitation_message">Use the Android app nasaPic to find your favorite photos from space.</string>
    <string name="invitation_custom_image">https://dl.dropboxusercontent.com/s/dei9b4b54sgvy3r/app_logo.png</string>
    <string name="invitation_cta">Try</string>
    <string name="invitation_error">Some errors happened when opening App-invite, please checkout whether you should update your Play-Service or not.</string>

    <string name="send_failed">No invitation has been sent.</string>
    <string name="google_play_services_error">Google Play Services Error.</string>

    <string name="wallpaper_as">This as Wallpaper</string>
    <string name="wallpaper_change_daily">Random wallpaper daily</string>
    <string name="wallpaper_change_daily_cancel">Save this photo as wallpaper, still keep changing wallpaper daily?</string>
    <string name="wallpaper_change_undo">Undo</string>
    <string name="wallpaper_changing">Changing wallpaper…</string>
    <string name="wallpaper_changed">Wallpaper changed.</string>
    <string name="wallpaper_undo_finished">Wallpaper has been reset.</string>
    <string name="wallpaper_error">Wallpaper can not be changed, some errors.</string>
    <string name="wallpaper_current_time_plan_dialog_title">You can update your system\'s wallpaper daily every:</string>
    <string name="wallpaper_update_frequency">Wallpaper update frequency has been changed: %s daily.</string>
    <string name="wallpaper_cancel_wallpaper_update">Stop changing wallpaper dynamically.</string>
    <string name="wallpaper_remind">Dynamical astronomy wallpaper by clicking.</string>
    <string name="wallpaper_open">Daily wallpaper</string>
    <string name="wallpaper_open_on">ON</string>
    <string name="wallpaper_open_off">OFF</string>
</resources>
