<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_invite"
        android:icon="@drawable/ic_app_invite"
        android:title="@string/action_invite"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_wallpaper_daily_setting"
        app:actionLayout="@layout/wallpaper_daily_setting_layout"
        android:title="@string/action_wallpaper_daily"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_app"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_more_apps"
        android:title="@string/action_more_apps"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never"/>
</menu>
