<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_backward"
        android:title="@string/action_backward"
        android:icon="@drawable/ic_backward"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:title="@string/action_forward"
        android:icon="@drawable/ic_forward"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_fb_share_photo"
        android:icon="@drawable/ic_share_fb_photo"
        android:title="@string/action_share_fb"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_photo"
        android:icon="@drawable/ic_share_photo"
        android:title="@string/action_share"
        android:visible="false"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="never" />
</menu>