<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="TimePlanBinding"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/common_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_detail_options"
                android:text="@string/wallpaper_current_time_plan_dialog_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/common_black"/>

            <RadioGroup
                android:id="@+id/time_plan_rp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/common_black_trans_100">

                <RadioButton
                    android:id="@+id/time_plan_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_detail_options"
                    android:text="@string/wallpaper_daily_time_plan_1_hour"
                    android:textColor="@color/common_black"/>

                <RadioButton
                    android:id="@+id/time_plan_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_detail_options"
                    android:text="@string/wallpaper_daily_time_plan_2_hour"
                    android:textColor="@color/common_black"/>

                <RadioButton
                    android:id="@+id/time_plan_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_detail_options"
                    android:text="@string/wallpaper_daily_time_plan_3_hour"
                    android:textColor="@color/common_black"/>

                <RadioButton
                    android:id="@+id/time_plan_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_detail_options"
                    android:text="@string/wallpaper_daily_time_plan_4_hour"
                    android:textColor="@color/common_black"/>

                <RadioButton
                    android:id="@+id/time_plan_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_detail_options"
                    android:text="@string/wallpaper_daily_time_plan_5_hour"
                    android:textColor="@color/common_black"/>

                <RadioButton
                    android:id="@+id/time_plan_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_detail_options"
                    android:text="@string/wallpaper_daily_time_plan_6_hour"
                    android:textColor="@color/common_black"/>
            </RadioGroup>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>
